--- a/oakd_description/package.xml
+++ b/oakd_description/package.xml
@@ -11,8 +11,8 @@
     <author email="espressobot@gmail.com">Steve Okay</author>
     <buildtool_depend>catkin</buildtool_depend>
    <!-- <exec_depend>oakd_description</exec_depend> -->
-    <exec_depend>description_ros</exec_depend>
-    <exec_depend>description_ros_control</exec_depend>
+    <!-- <exec_depend>description_ros</exec_depend> -->
+    <!-- <exec_depend>description_ros_control</exec_depend> -->
     <depend>urdf</depend>
     <depend>xacro</depend>
     <exec_depend>roslaunch</exec_depend>
